--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,14 +6,14 @@
 <body>
 
   <div>
-    <form action="/login" method="POST">
-      <label for="UserName">User name:</label>
-      <input type="text" name="username" id="username" required>
-      <label for="Password">Password:</label>
-      <input type="text" name="password" id="password" required>
-      <button>Submit</button>
-    </form>
+    <label for="UserName">User name:</label>
+    <input type="text" name="username" id="username" required>
+    <label for="Password">Password:</label>
+    <input type="text" name="password" id="password" required>
+    <button>Submit</button>
   </div>
+
+  <h4>If you don't have an acount please click <a href="/sign-up">here</a></h4>
   
 </body>
 </html>
