--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,14 +6,14 @@
 <body>
 
   <div>
-    <label for="UserName">User name:</label>
+    <label for="UserName">نام کاربری:</label>
     <input type="text" name="username" id="username" required>
-    <label for="Password">Password:</label>
+    <label for="Password">کلمه عبور:</label>
     <input type="text" name="password" id="password" required>
-    <button>Submit</button>
+    <button>ورود</button>
   </div>
 
-  <h4>If you don't have an acount please click <a href="/sign-up">here</a></h4>
+  <h4>اگر  حساب کاربری ندارید برای ایجاد حساب کاربری اینجا  <a href="/sign-up">کلیک</a> کنید.</h4>
   
 </body>
 </html>
