Add style to sign up form and also add picture to left section of the form

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -4,10 +4,10 @@
 <%- include("./partials/head.ejs") %>
 
 <body>
-
+  
   <div class="d-flex form-style">
 
-    <div class="container-fluid col-sm-6">
+    <div class="form-right-side container-fluid col-sm-6">
 
       <form action="/sign-up" method="POST">
 
@@ -35,8 +35,8 @@
       <h4>اگر از قبل دارای حساب کاربری می باشید اینجا  <a href="/login">کلیک</a> کنید.</h4>
     </div>
 
-    <div class="col-sm-6">
-      something
+    <div class="form-img col-sm-6">
+      <img src="./img/it1.jpg" alt="">
     </div>
   </div>
 
