--- a/public/style.css
+++ b/public/style.css
@@ -9,11 +9,60 @@
 
 html {
   direction: rtl;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  background-color: #181818;
+}
+
+body {
+  border-radius: 50px;
 }
 
 .form-style {
+  padding: 0;
+  position: relative;
+  /* background-color: white; */
+  background-color: #eb171e;
   border: 1px solid black;
+  border-radius: 50px;
   height: 500px;
   width: 150vh;
-  margin: 40px;
+  box-shadow: -11px 14px 10px black;
+}
+
+.form-right-side {
+  padding: 0;
+  border-radius: 50px;
+}
+
+.form-img img {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 45px;
+  border-bottom-left-radius: 45px;
+  position: relative;
+}
+
+label {
+  color: white;
+  font-size: 15px;
+  margin: 10px 0;
+}
+
+h4 {
+  color: white;
+  font-size: 15px !important;
+  margin-top: 20px;
+}
+
+button.btn.btn-primary.btn-block {
+  margin: 25px 0;
+}
+
+.container-fluid.col-sm-6 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
