Change sign-up page to mobile first view and add some style change some style of it

--- a/public/style.css
+++ b/public/style.css
@@ -23,36 +23,41 @@ body {
 .form-style {
   padding: 0;
   position: relative;
-  /* background-color: white; */
-  background-color: #eb171e;
+  background-color: white;
   border: 1px solid black;
   border-radius: 50px;
-  height: 500px;
-  width: 150vh;
+  height: 650px;
+  width: 75vw;
   box-shadow: -11px 14px 10px black;
 }
+
+.form-img img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 45px;
+  display: none;
+}
+
 
 .form-right-side {
   padding: 0;
   border-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 2;
 }
 
-.form-img img {
-  width: 100%;
-  height: 100%;
-  border-top-left-radius: 45px;
-  border-bottom-left-radius: 45px;
-  position: relative;
-}
 
 label {
-  color: white;
   font-size: 15px;
   margin: 10px 0;
 }
 
 h4 {
-  color: white;
   font-size: 15px !important;
   margin-top: 20px;
 }
@@ -61,8 +66,13 @@ button.btn.btn-primary.btn-block {
   margin: 25px 0;
 }
 
-.container-fluid.col-sm-6 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+
+@media only screen and (min-width: 992px) {
+  .form-img img {
+    display: block;
+    border-radius: 40px 0 0 40px;
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
 }
