--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -7,26 +7,26 @@
   
   <div class="d-flex form-style">
 
-    <div class="form-right-side container-fluid col-sm-6">
+    <div class="form-right-side container-fluid col-12 col-lg-6">
 
       <form action="/sign-up" method="POST">
 
-        <div class="form-group row">
+        <div class="form-group">
           <label for="UserName">ایمیل:</label>
           <input class="form-control" type="text" name="email" id="email" required>
         </div>
 
-        <div class="form-group row">        
+        <div class="form-group">        
           <label for="UserName">نام کاربری:</label>
           <input class="form-control" type="text" name="username" id="username" required>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group">
           <label for="Password">کلمه عبور:</label>
           <input class="form-control" type="text" name="password" id="password" required>
         </div>
         
-        <div class="d-grid row">
+        <div class="d-grid">
           <button class="btn btn-primary btn-block">ثبت نام</button>
         </div>
 
@@ -35,7 +35,7 @@
       <h4>اگر از قبل دارای حساب کاربری می باشید اینجا  <a href="/login">کلیک</a> کنید.</h4>
     </div>
 
-    <div class="form-img col-sm-6">
+    <div class="form-img col-12 col-lg-6">
       <img src="./img/it1.jpg" alt="">
     </div>
   </div>
