--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,15 +5,42 @@
 
 <body>
 
-  <div>
-    <label for="UserName">نام کاربری:</label>
-    <input type="text" name="username" id="username" required>
-    <label for="Password">کلمه عبور:</label>
-    <input type="text" name="password" id="password" required>
-    <button>ورود</button>
-  </div>
+  <!-------------------------
+     form section 
+  -------------------------->
+  <div class="d-flex form-style">
 
-  <h4>اگر  حساب کاربری ندارید برای ایجاد حساب کاربری اینجا  <a href="/sign-up">کلیک</a> کنید.</h4>
+    <!-------------------------
+     form right section 
+    -------------------------->
+    <div class="form-right-side container-fluid col-12 col-lg-6">
+      <form action="/login" method="POST">
+        <div class="form-group">        
+          <label for="UserName">نام کاربری:</label>
+          <input class="form-control" type="text" name="username" id="username" required>
+        </div>
+
+        <div class="form-group">
+          <label for="Password">کلمه عبور:</label>
+          <input class="form-control" type="text" name="password" id="password" required>
+        </div>
+        
+        <div class="d-grid">
+          <button class="btn btn-primary btn-block">ورود</button>
+        </div>
+      </form>
+
+      <!-------------------------
+        link for sign-up page
+      -------------------------->
+      <h4>اگر  حساب کاربری ندارید برای ایجاد حساب کاربری اینجا  <a href="/sign-up">کلیک</a> کنید.</h4>
+    </div>
+
+    <!-------------------------
+     form left section 
+    -------------------------->
+    <%- include("./partials/formImg.ejs") %>
+  </div>
   
 </body>
 </html>
