--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -14,6 +14,7 @@
      form right section 
     -------------------------->
     <div class="form-right-side container-fluid col-12 col-lg-6">
+      <h3 class="title-of-form-sign-up">ایحاد حساب کاربری</h3>
       <form action="/sign-up" method="POST">
         <div class="form-group">
           <label for="email">ایمیل:</label>
@@ -34,7 +35,7 @@
           <button class="btn btn-primary btn-block">ثبت نام</button>
         </div>
       </form>
-      
+
       <!-------------------------
         link for login page
       -------------------------->
