--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -28,7 +28,7 @@
 
         <div class="form-group">
           <label for="Password">کلمه عبور:</label>
-          <input class="form-control" type="text" name="password" id="password" required>
+          <input class="form-control" type="password" name="password" id="password" required>
         </div>
         
         <div class="d-grid">
