--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -15,7 +15,7 @@
     -------------------------->
     <div class="form-right-side container-fluid col-12 col-lg-6">
       <h3 class="title-of-form-sign-up">ایحاد حساب کاربری</h3>
-      <form action="/sign-up" method="POST">
+      <form id="sign-up">
         <div class="form-group">
           <label for="email">ایمیل:</label>
           <input class="form-control" type="text" name="email" id="email" required>
@@ -48,6 +48,36 @@
     <%- include("./partials/formImg.ejs") %>
   </div>
 
+  <script>
+    const form = document.getElementById("sign-up");
+
+    form.addEventListener("submit", async (event) => {
+      event.preventDefault();
+      const email = document.getElementById("email").value;
+      const username = document.getElementById("username").value;
+      const password = document.getElementById("password").value;
+
+
+      const result = await fetch("/api/sign-up", {
+        method: "POST",
+        headers: {
+          "Content-type": "application/json"
+        },
+        body: JSON.stringify({
+          email,
+          username,
+          password
+        })
+      })
+        .then(res => res.json());  
+
+      if(result.status === "ok") {
+        alert("Register was successfull");
+      } else {
+        alert(result.error);
+      }
+    })
+  </script>
 
 </body>
 </html>
