Changing the change-password views and also how use post method for changing password

--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -5,17 +5,65 @@
 
 <body>
 
-  <div>
-    <form action="/change-password" method="POST">
-      <label for="CurentPassword">curent password:</label>
-      <input type="text" name="curentPassword" id="curentpassword" required>
-      <label for="NewPassword">New password:</label>
-      <input type="text" name="newPassword" id="newPassword" required>
-      <label for="Password">Repeat new password:</label>
-      <input type="text" name="repeatNewPassword" id="repeatNewPassword" required>
-      <button>Submit</button>
-    </form>
+  <!-------------------------
+     form section 
+  -------------------------->
+  <div class="d-flex form-style">
+
+    <!-------------------------
+     form right section 
+    -------------------------->
+    <div class="form-right-side container-fluid col-12 col-lg-6">
+      <h3 class="title-of-form-login">تغییر رمز عبور</h3>
+      <form id="change-password">
+        <div class="form-group">        
+          <label for="oldPassword">رمز عبور قبلی:</label>
+          <input class="form-control" type="password" autocomplete="off" name="oldPassword" id="oldPassword" required>
+        </div>
+
+        <div class="form-group">
+          <label for="newPassword">رمز عبور جدید:</label>
+          <input class="form-control" type="password" autocomplete="off" name="newPassword" id="Newassword" required>
+        </div>
+        
+        <div class="d-grid">
+          <button class="btn btn-primary btn-block">ذخیره</button>
+        </div>
+      </form>
+
+    </div>
+
   </div>
+
+  <script>
+  const form = document.getElementById("change-password");
+
+  form.addEventListener("submit", async (event) => {
+    event.preventDefault();
+    const oldPassword = document.getElementById("oldPassword").value;
+    const newPassword = document.getElementById("newPassword").value;
+
+
+
+    const result = await fetch("/api/change-password", {
+        method: "POST",
+        headers: {
+            "Content-type": "application/json"
+        },
+        body: JSON.stringify({
+          oldPassword,
+          newPassword
+        })
+    })
+        .then(res => res.json());
+
+    if(result.status === "ok") {
+        alert("Password was change successfully");
+    } else {
+        alert(result.error);
+    }
+  });
+  </script>
   
 </body>
 </html>
