Add action in app.js for reciving a data that send from change-password page, then change password in database

--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -23,7 +23,7 @@
 
         <div class="form-group">
           <label for="newPassword">رمز عبور جدید:</label>
-          <input class="form-control" type="password" autocomplete="off" name="newPassword" id="Newassword" required>
+          <input class="form-control" type="password" autocomplete="off" name="newPassword" id="newPassword" required>
         </div>
         
         <div class="d-grid">
@@ -51,6 +51,7 @@
             "Content-type": "application/json"
         },
         body: JSON.stringify({
+          token:  localStorage.getItem("token"),
           oldPassword,
           newPassword
         })
