--- a/views/change-password.ejs
+++ b/views/change-password.ejs
@@ -8,13 +8,13 @@
   <!-------------------------
      form section 
   -------------------------->
-  <div class="d-flex form-style">
+  <div class="d-flex form-style form-change-password">
 
     <!-------------------------
      form right section 
     -------------------------->
     <div class="form-right-side container-fluid col-12 col-lg-6">
-      <h3 class="title-of-form-login">تغییر رمز عبور</h3>
+      <h3 class="title-of-change-password">تغییر رمز عبور</h3>
       <form id="change-password">
         <div class="form-group">        
           <label for="oldPassword">رمز عبور قبلی:</label>
